--- a/RyanAir/RyanAir/app/templates/ryanAirFares.html
+++ b/RyanAir/RyanAir/app/templates/ryanAirFares.html
@@ -1,4 +1,4 @@
-﻿<div id="RyanAirFares">
+﻿<!--<div id="RyanAirFares">
     <span>{{departureAirportIataCode}} -> </span>
     <span>{{arrivalAirportIataCode}} : </span>
-</div>
+</div>-->
